Closed Bug 578164 Opened 15 years ago Closed 15 years ago

better invalid enum messages

Categories

(Core :: Graphics: CanvasWebGL, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: bjacob, Assigned: bjacob)

Details

Attachments

(1 file, 1 obsolete file)

As discussed with Andor and Matt today!
Attachment #456929 - Attachment is patch: true
Attachment #456929 - Attachment mime type: application/octet-stream → text/plain
Attachment #456929 - Flags: review?(vladimir)
This new version introduces ValidateDrawModeEnum, factoring out some code between drawArrays and drawElements.
Attachment #456929 - Attachment is obsolete: true
Attachment #457378 - Flags: review?(vladimir)
Attachment #456929 - Flags: review?(vladimir)
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Assignee: nobody → bjacob
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: