b=578164; better invalid enum messages; r=vladimir